--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # Links listed below will be included in your site's navbar (navigation at the top)
 
-- text: About
-  href: /about
+- text: Anchor news
+  href: /#news
 - text: Occurrences
   href: /occurrence/search
 - text: Example pages
