--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -1,6 +1,17 @@
 relatedPosts:
   en: "Related Posts"
-  da: "Relaterede artikler"
+  es: "Artículos relacionados"
 differentLanguage:
   en: "This page is available in following languages"
-  da: "Læs på"
+  es: "Esta página está disponible en los siguientes idiomas"
+terms:
+  en: |
+    We use cookies on our website. Some are technically necessary, while others help us improve your user experience. You can decline non-essential cookies by selecting “Reject”. Please see our [Privacy Policy](/privacy) for further information about our privacy practices and use of cookies.
+  es: |
+    Usamos cookies en nuestro sitio web. Algunos son técnicamente necesarios, mientras que otros nos ayudan a mejorar su experiencia de usuario. Puede rechazar las cookies no esenciales seleccionando "Rechazar". Consulte nuestra [Política de privacidad](/privacy) para obtener más información sobre nuestras prácticas de privacidad y el uso de cookies.
+acceptTerms:
+  en: 'Accept'
+  es: 'Acepto'
+rejectTerms:
+  en: 'Reject'
+  es: 'Rechazar'
