--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,48 +1,43 @@
 # Footer content is organized in columns.
-# You can also add a small print license statement at the bottom.
+ # You can also add a small print license statement at the bottom.
 
-# Columns (the more you add, the narrower they will be)
-columns:
+ # Columns (the more you add, the narrower they will be)
+ columns:
+   - name: Acerca de
+     links:
+     - text: Biodiversidata
+       href: http://example.com
+     - text: Quiénes somos
+       href: http://example.com
+     - text: Nuestra historia
+       href: http://example.com
 
-  - name: Acerca de
-    links:
-    - text: Biodiversidata
-      href: /acercade/biodiversidata
-    - text: Quiénes somos
-      href: http://example.com
-    - text: Quiénes somos
-      href: http://example.com
+   - name: Code
+     description: | # Can be Markdown
+       This project is open source.
 
-  - name: Code
-    description: | # Can be Markdown
-      This project is open source.
-    links:
-      - text: Brand: Renata Polastri
-        href: https://www.renatapolastri.com
+   - name: Contact
+     description: | # Can be Markdown
+       Social icons links defined in `_config.yml`
+       * biodiversidata@gmail.com
+       * Uruguay
+     connectIcons: true
 
-  - name: Contacto
-    description: | # Can be Markdown
-#      Social icons links defined in `_config.yml`
-      * biodiversidata@gmail.com
-      * Uruguay
-
-    connectIcons: true
-
-  # EXAMPLE
-  #- name: Group name
-  #  description: |
-  #    An optional description. Can be markdown
-  #  links: # optional as well
-  #  - text: link title
-  #    href: http://example.com
-  #  - text: link title 2
-  #    href: http://example2.com
-  #  connectIcons: true # optional - show social icons (defined in _config.yml)
+   # EXAMPLE
+   #- name: Group name
+   #  description: |
+   #    An optional description. Can be markdown
+   #  links: # optional as well
+   #  - text: link title
+   #    href: http://example.com
+   #  - text: link title 2
+   #    href: http://example2.com
+   #  connectIcons: true # optional - show social icons (defined in _config.yml)
 
 
-# Small print license statement to add at the bottom of the footer. Can be Markdown
-# Will be prefixed by "© {{ site.author }}" if defined in _config.yml
-# Will be postfixed by "Powered by GBIF"
-# (Disabled by default, remove the '#' lines on the following two lines to enable.)
-# license:
-#  Content on this site is licensed under an [Creative Commons Attribution 4.0 License](https://creativecommons.org/licenses/by/4.0/).
+ # Small print license statement to add at the bottom of the footer. Can be Markdown
+ # Will be prefixed by "© {{ site.author }}" if defined in _config.yml
+ # Will be postfixed by "Powered by GBIF"
+ # (Disabled by default, remove the '#' lines on the following two lines to enable.)
+ #license: >
+ #  Content on this site is licensed under an [Creative Commons Attribution 4.0 License](https://creativecommons.org/licenses/by/4.0/).
