--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 #
-# If you need help with YAML syntax, here are some quick references for you: 
+# If you need help with YAML syntax, here are some quick references for you:
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 # You should also look at https://hp-theme.gbif-staging.org/documentation-intro for options
@@ -20,15 +20,16 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Biodiversidata # the title of your site should go here
-email: your-email@example.com
+email: biodiversidata@gmail.com
 description: >- # this means to ignore newlines (until baseurl:)
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://biodiversidata.org/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: yourname # if you have an account you want to link to. Else comment this line out
-github_username:  yourname # if you have an account you want to link to. Else comment this line out
+twitter_username: biodiversidata # if you have an account you want to link to. Else comment this line out
+github_username:  bienflorencia # if you have an account you want to link to. Else comment this line out
+flickr_username: biodiversidata
 
 # Build settings
 theme: minima
@@ -61,9 +62,9 @@ algae:
   style:
     # square: false               # Should corners be square or rounded
     colors:
-      primary: "#56487f"          # Primary color of your brand. Use HEX code. Used for buttons and links
-      # links: "#fa5e97"          # What color should links have. Use a HEX code. DEfault is primary color. 
-    coloredHeadlineLinks: false   # If a headline is a link, then use the link color. Default is true. 
+      primary: "#5c4f7a"          # Primary color of your brand. Use HEX code. Used for buttons and links
+      # links: "#fa5e97"          # What color should links have. Use a HEX code. DEfault is primary color.
+    coloredHeadlineLinks: false   # If a headline is a link, then use the link color. Default is true.
   navbar:                         # RELATED TO NAVIGATION BAR
     # brandBackground: yellow     # Define a custom background for the logo/title in the top navigation bar
     # color: "tomato"             # What color should the navbar be?
