--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,15 +1,15 @@
 # Links listed below will be included in your site's navbar (navigation at the top)
 
-- text: Anchor news
-  href: /#news
+- text: Acerca de
+  href: /#acercade
 - text: Registros de presencia
-  href: /registros-de-presencia/buscar
-- text: Example pages
   menu: # Dropdown menu (one level deep only)
-  - text: Simple
-    href: /example-pages/simple
-  - text: Complex
-    href: /example-pages/complex
+  - text: En GBIF
+    href: /datos/buscar
+  - text: Zenodo
+    href: /datos/zenodo
+- text: Novedades
+  href: /novedades/
 - text: Links
   menu: # Dropdown menu (one level deep only)
   - text: Base theme demo
@@ -25,4 +25,4 @@
   - text: YAML tutorial
     href: https://dev.to/paulasantamaria/introduction-to-yaml-125f
 - text: Novedades
-  href: /novedades/
+  href: /#novedades/
