--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -22,6 +22,10 @@
      description: | # Can be Markdown
        * biodiversidata@gmail.com
        * Uruguay
+     links:
+     - text: Brand by Renata Polastri
+       href: https://renatapolastri.com
+       
      connectIcons: true
 
    # EXAMPLE
