--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -7,26 +7,27 @@
      links:
      - text: Biodiversidata
        href: http://example.com
-     - text: Quiénes somos
+     - text: Manifiesto
        href: http://example.com
      - text: Nuestra historia
        href: http://example.com
-
-   - name: Code
-     description: | # Can be Markdown
-     links:
-     - text: Brand by Renata Polastri
+     - text: Quiénes somos
        href: http://example.com
 
    - name: Contact
      description: | # Can be Markdown
        * biodiversidata@gmail.com
        * Uruguay
+     connectIcons: true
+     
+   - name: Site credits
+     description: | # Can be Markdown
      links:
+     - text: Built by Florencia Grattarola
+       href: https://flograttarola.com
      - text: Brand by Renata Polastri
        href: https://renatapolastri.com
-       
-     connectIcons: true
+
 
    # EXAMPLE
    #- name: Group name
