--- a/_config.yml
+++ b/_config.yml
@@ -29,13 +29,14 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://biodiversidata.org/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: biodiversidata # if you have an account you want to link to. Else comment this line out
 github_username:  bienflorencia # if you have an account you want to link to. Else comment this line out
-flickr_username: biodiversidata
+#flickr_username: biodiversidata
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
+  - jemoji
 
 remote_theme: gbif/jekyll-hp-base-theme
 
