--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
-  - jekyll-jemoji
+  #- jekyll-jemoji
 
 remote_theme: gbif/jekyll-hp-base-theme
 
