--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@
   - text: Zenodo
     href: /datos/zenodo
 - text: Novedades
-  href: /#novedades/
+  href: /novedades/
 - text: Links
   menu: # Dropdown menu (one level deep only)
   - text: Base theme demo
@@ -25,6 +25,6 @@
   - text: YAML tutorial
     href: https://dev.to/paulasantamaria/introduction-to-yaml-125f
 - text: Publicaciones
-  href: /publicaciones
+  href: /example-pages/complex
 - text: Recursos
-  href: /recursos
+  href: /example-pages/simple
