--- a/_config.yml
+++ b/_config.yml
@@ -42,10 +42,10 @@ remote_theme: gbif/jekyll-hp-base-theme
 
 # For use by the 'standardPrivacy' layout
 privacy:
-  name: Your organisation name
-  domain: your-domain.org
-  contactEmail: info@your-domain.org
-  helpdeskEmail: helpdesk@your-domain.org
+  name: Biodiversidata
+  domain: biodiversidata.org
+  contactEmail: biodiversidata@gmail.org
+  helpdeskEmail: biodiversidata@gmail.org
 
 # The text for the terms can be changed by adding translations for 'terms', 'acceptTerms' and 'rejectTerms' in `/_data/translations.yml`.
 siteMeasurements:
