--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -6,7 +6,7 @@
    - name: Acerca de
      links:
      - text: Biodiversidata
-       href: http://example.com
+       href: /about
      - text: Manifiesto
        href: http://example.com
      - text: Nuestra historia
