--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,8 @@
 title: Biodiversidata # the title of your site should go here
 email: biodiversidata@gmail.com
 description: >- # this means to ignore newlines (until baseurl:)
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Biodiversidata es el Consorcio de Datos de Biodiversidad del Uruguay |
+  Biodiversidata is the Uruguayan Consortium of Biodiversity Data
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://biodiversidata.org/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: biodiversidata # if you have an account you want to link to. Else comment this line out
