--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,4 @@
 # Links listed below will be included in your site's navbar (navigation at the top)
-
 - text: Acerca de
   href: /#acercade
 - text: Datos
@@ -9,22 +8,22 @@
   - text: Zenodo
     href: /datos/zenodo
 - text: Novedades
-  href: /novedades/
-- text: Links
-  menu: # Dropdown menu (one level deep only)
-  - text: Base theme demo
-    href: https://hp-base-theme.gbif-staging.org/
-  - text: Other sites using the theme
-    href: https://github.com/gbif/?q=hp-&type=all&language=&sort=
-  - text: "---" # Divider to separate blocks of menu items (at least 3 "-")
-  - text: "Docs" # Title for block of menu items
-  - text: Jekyll documentation
-    href: https://jekyllrb.com/docs/pages/
-  - text: Markdown tutorial
-    href: https://guides.github.com/features/mastering-markdown/
-  - text: YAML tutorial
-    href: https://dev.to/paulasantamaria/introduction-to-yaml-125f
+  href: /#novedades
+# - text: Links
+#   menu: # Dropdown menu (one level deep only)
+#   - text: Base theme demo
+#     href: https://hp-base-theme.gbif-staging.org/
+#   - text: Other sites using the theme
+#     href: https://github.com/gbif/?q=hp-&type=all&language=&sort=
+#   - text: "---" # Divider to separate blocks of menu items (at least 3 "-")
+#   - text: "Docs" # Title for block of menu items
+#   - text: Jekyll documentation
+#     href: https://jekyllrb.com/docs/pages/
+#   - text: Markdown tutorial
+#     href: https://guides.github.com/features/mastering-markdown/
+#   - text: YAML tutorial
+#     href: https://dev.to/paulasantamaria/introduction-to-yaml-125f
 - text: Publicaciones
-  href: /example-pages/complex
+  href: /menu/publicaciones
 - text: Recursos
   href: /example-pages/simple
