--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,30 +1,31 @@
 datos:
   features:
-    - title: Datos en GBIF
-      description: |      # required
-        Usá el mapa para explorar los datos publicados en GBIF por integrantes de Biodiversidata.
-      # img required
-      background: https://inaturalist-open-data.s3.amazonaws.com/photos/163262933/original.jpg
-      imageLicense: *Paromoeocerus barbicornis* observed in Uruguay by Guillermo Menéndez licensed under [CC-BY-NC](http://creativecommons.org/licenses/by-nc/4.0/)
-      #overlayColor: "#000033"
+  - title: Datos en GBIF
+    description: |      # required
+      Usá el mapa para explorar los datos publicados en GBIF por integrantes de Biodiversidata.
+    # img required
+    background: https://inaturalist-open-data.s3.amazonaws.com/photos/163262933/original.jpg
+    imageLicense: |
+      *Paromoeocerus barbicornis* observed in Uruguay by Guillermo Menéndez licensed under [CC-BY-NC](http://creativecommons.org/licenses/by-nc/4.0/)
+    #overlayColor: "#000033"
+    href: datos/buscar/?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72&view=MAP
+    cta:
+    - text: Explorá los datos
       href: datos/buscar/?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72&view=MAP
-      cta:
-      - text: Explorá los datos
-        href: datos/buscar/?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72&view=MAP
-        isPrimary: true
+      isPrimary: true
 
 
-    - title: NaturalistaUY
-      description: |      # required
-        El sitio de iNaturalist para Uruguay es parte de Biodiversidata
-      # img required
-      background: https://inaturalist-open-data.s3.amazonaws.com/photos/172604649/large.jpeg
-      imageLicense:
-      #overlayColor: "#000033"
+  - title: NaturalistaUY
+    description: |      # required
+      El sitio de iNaturalist para Uruguay es parte de Biodiversidata
+    # img required
+    background: https://inaturalist-open-data.s3.amazonaws.com/photos/172604649/large.jpeg
+    imageLicense:
+    #overlayColor: "#000033"
+    href: https://naturalista.uy
+    cta:
+    - text: Explorá los datos en GBIF
+      href: datos/buscar/?publishingOrg=28eb1a3f-1c15-4a95-931a-4af90ecb574d&view=MAP
+      isPrimary: true
+    - text: Accedé a la plataforma
       href: https://naturalista.uy
-      cta:
-      - text: Explorá los datos en GBIF
-        href: datos/buscar/?publishingOrg=28eb1a3f-1c15-4a95-931a-4af90ecb574d&view=MAP
-        isPrimary: true
-      - text: Accedé a la plataforma
-        href: https://naturalista.uy
