--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,31 +1,71 @@
-datos:
-  features:
-  - title: Datos en GBIF
-    description: |      # required
-      Usá el mapa para explorar los datos publicados en GBIF por integrantes de Biodiversidata.
-    # img required
-    background: https://inaturalist-open-data.s3.amazonaws.com/photos/163262933/original.jpg
-    imageLicense: |
-      *Paromoeocerus barbicornis* observed in Uruguay by Guillermo Menéndez licensed under [CC-BY-NC](http://creativecommons.org/licenses/by-nc/4.0/)
-    #overlayColor: "#000033"
+# Descripcion inicial
+descripcion:
+  markdownContent: |
+    **Biodiversidata** es un proyecto colaborativo que busca mejorar el conocimiento sobre la biodiversidad en el Uruguay a través de la disponibilización de datos abiertos para su uso en la investigación científica, la educación ambiental y la toma de decisiones basadas en evidencia. Biodiversidata facilita la recopilación, estandarización y publicación de datos de biodiversidad derivados de la investigación científica. También promueve iniciativas de ciencia comunitaria y la generación de datos de calidad por parte de personas no científicas. A partir de los datos generados, Biodiversidata además busca responder preguntas de investigación en el país y la región de cara a abordar los desafíos globales de la pérdida de la biodiversidad y la degradación del ambiente.
+
+
+# Splits
+splitDatos:
+  reverse: false
+  title: Datos en GBIF
+  height: 70vh
+  description: |      # required
+    Usá el mapa para explorar los datos publicados en GBIF por integrantes de Biodiversidata.
+  # img required
+  background: https://inaturalist-open-data.s3.amazonaws.com/photos/163262933/original.jpg
+  imageLicense: |
+    *Paromoeocerus barbicornis* observed in Uruguay by Guillermo Menéndez licensed under [CC-BY-NC](http://creativecommons.org/licenses/by-nc/4.0/) via [iNaturalist](https://www.gbif.org/occurrence/3456209551)
+  #overlayColor: "#000033"
+  href: datos/buscar/?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72&view=MAP
+  cta:
+  - text: Explorá los datos
     href: datos/buscar/?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72&view=MAP
-    cta:
-    - text: Explorá los datos
-      href: datos/buscar/?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72&view=MAP
-      isPrimary: true
+    isPrimary: true
 
+splitNaturalistaUY:
+  reverse: true
+  title: NaturalistaUY
+  height: 70vh
+  description: |      # required
+    El sitio de iNaturalist para Uruguay es parte de Biodiversidata
+  # img required
+  background: https://inaturalist-open-data.s3.amazonaws.com/photos/172604649/large.jpeg
+  imageLicense: |
+    *Heteroxolmis dominicana* observed in Uruguay by Julián Rolando Tocce (licensed under http://creativecommons.org/licenses/by-nc/4.0/) via [iNaturalist](https://www.gbif.org/occurrence/3455634222)
+  #overlayColor: "#000033"
+  href: https://naturalista.uy
+  cta:
+  - text: Explorá los datos en GBIF
+    href: datos/buscar/?publishingOrg=28eb1a3f-1c15-4a95-931a-4af90ecb574d&view=MAP
+    isPrimary: true
+  - text: Accedé a la plataforma
+    href: https://naturalista.uy
 
-  - title: NaturalistaUY
+# Features
+novedades:
+  features:
+  # - title: Datos en GBIF
+  #   description: |      # required
+  #     Usá el mapa para explorar los datos publicados en GBIF por integrantes de Biodiversidata.
+  #   # img required
+  #   background: https://inaturalist-open-data.s3.amazonaws.com/photos/163262933/original.jpg
+  #   imageLicense: |
+  #     *Paromoeocerus barbicornis* observed in Uruguay by Guillermo Menéndez licensed under [CC-BY-NC](http://creativecommons.org/licenses/by-nc/4.0/)
+  #   #overlayColor: "#000033"
+  #   href: datos/buscar/?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72&view=MAP
+  #   cta:
+  #   - text: Explorá los datos
+  #     href: datos/buscar/?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72&view=MAP
+  #     isPrimary: true
+
+  - title: Lanzamiento de NaturalistaUY
     description: |      # required
-      El sitio de iNaturalist para Uruguay es parte de Biodiversidata
+      El 13 de diciembre se realizó el lanzamiento de NaturalistaUY el portal de iNaturalist para Uruguay
     # img required
     background: https://inaturalist-open-data.s3.amazonaws.com/photos/172604649/large.jpeg
-    imageLicense:
     #overlayColor: "#000033"
-    href: https://naturalista.uy
+    href: /novedades/2019-04-30-primer-encuentro-biodiversidata
     cta:
-    - text: Explorá los datos en GBIF
-      href: datos/buscar/?publishingOrg=28eb1a3f-1c15-4a95-931a-4af90ecb574d&view=MAP
+    - text: Reviví el lanzamiento
+      href: https://youtu.be/4YIEEYCUf8Q
       isPrimary: true
-    - text: Accedé a la plataforma
-      href: https://naturalista.uy
