--- a/_config.yml
+++ b/_config.yml
@@ -55,9 +55,9 @@ siteMeasurements:
 
 algae:
   rootLang: es
-  # latestPostLimit: 2
+  # latestPostLimit: 3
   logo: /assets/images/logos/logo_h_col.png  # Logo in navbar, will be displayed with 28px height
-  # logoAndTitle: false           # include the title next to the logo
+  # logoAndTitle: true           # include the title next to the logo
   archive_permalink: /novedades/  # Permalink of page using archive.html layout, required when using post categories
   style:
     # square: false               # Should corners be square or rounded
