--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -6,7 +6,7 @@
    - name: Acerca de
      links:
      - text: Biodiversidata
-       href: /acercade
+       href: /about
      - text: Nuestra historia
        href: /historia
      - text: Quiénes somos
