--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,3 +1,9 @@
+# Descripción en home
+text:
+  description: |      # required
+    **Biodiversidata** busca mejorar el conocimiento sobre la biodiversidad en el Uruguay a través de la disponibilización de datos abiertos para su uso en la investigación científica, la educación ambiental y la toma de decisiones basadas en evidencia.
+  hasWhiteText: false
+
 # Preguntas en home
 splitPregunta1:
   reverse: true
@@ -44,65 +50,67 @@ stats:
     - title: <span data-ajax-url="https://api.gbif.org/v1/dataset/search?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72"</span>
       description: Conjuntos de datos
       background: assets/images/flo-icons/database-square.svg
-      href: http://127.0.0.1:4000/datos/buscar/?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72&view=DATASETS
-    - title: <span data-ajax-url="https://api.gbif.org/v1/literature/search?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72&amp;peerReview=true&amp;literatureType=journal&amp;literatureType=journal&amp;relevance=GBIF_USED"</span>
+      href: datos/buscar/?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72&view=DATASETS
+    - title: <span data-ajax-url="https://api.gbif.org/v1/literature/search?publishingOrganizationKey=862f7ec3-3134-4dce-ab5a-03c81f54bd72"</span>
       description: Publicaciones derivadas
       background: assets/images/flo-icons/obp-square.svg
-      href:
+      href: literature/buscar/?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72
     - title: <span data-ajax-url="https://api.gbif.org/v1/occurrence/search?publishingOrg=28eb1a3f-1c15-4a95-931a-4af90ecb574d&amp;country=UY"</span>
       description: Registros de NaturalistaUY
       background: assets/images/flo-icons/naturalistauy-square.svg
       href: datos/buscar/?publishingOrg=28eb1a3f-1c15-4a95-931a-4af90ecb574d&view=MAP
 
 
-# Splits
-splitDatos:
-  reverse: false
-  title: Datos en GBIF
-  height: 70vh
-  description: |      # required
-    Usá el mapa para explorar los datos publicados en GBIF por integrantes de Biodiversidata
-  # img required
-  background: https://inaturalist-open-data.s3.amazonaws.com/photos/163262933/original.jpg
-  imageLicense: |
-    *Paromoeocerus barbicornis* observed in Uruguay by Guillermo Menéndez licensed under [CC-BY-NC](http://creativecommons.org/licenses/by-nc/4.0/) via [iNaturalist](https://www.gbif.org/occurrence/3456209551)
-  #overlayColor: "#000033"
-  href: datos/buscar/?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72&view=MAP
-  cta:
-  - text: Explorá los datos
-    href: datos/buscar/?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72&view=MAP
-    isPrimary: true
-
-splitNaturalistaUY:
-  reverse: true
-  title: NaturalistaUY
-  height: 70vh
-  description: |      # required
-    El sitio de iNaturalist para Uruguay es parte de Biodiversidata
-  # img required
-  background: https://inaturalist-open-data.s3.amazonaws.com/photos/172604649/large.jpeg
-  imageLicense: |
-    *Heteroxolmis dominicana* observed in Uruguay by Julián Rolando Tocce (licensed under http://creativecommons.org/licenses/by-nc/4.0/) via [iNaturalist](https://www.gbif.org/occurrence/3455634222)
-  #overlayColor: "#000033"
-  href: https://naturalista.uy
-  cta:
-  - text: Explorá los datos en GBIF
-    href: datos/buscar/?publishingOrg=28eb1a3f-1c15-4a95-931a-4af90ecb574d&view=MAP
-    isPrimary: true
-  - text: Accedé a la plataforma
-    href: https://naturalista.uy
+# # Splits
+# splitDatos:
+#   reverse: false
+#   title: Datos en GBIF
+#   height: 70vh
+#   description: |      # required
+#     Usá el mapa para explorar los datos publicados en GBIF por integrantes de Biodiversidata
+#   # img required
+#   background: https://inaturalist-open-data.s3.amazonaws.com/photos/163262933/original.jpg
+#   imageLicense: |
+#     *Paromoeocerus barbicornis* observed in Uruguay by Guillermo Menéndez licensed under [CC-BY-NC](http://creativecommons.org/licenses/by-nc/4.0/) via [iNaturalist](https://www.gbif.org/occurrence/3456209551)
+#   #overlayColor: "#000033"
+#   href: datos/buscar/?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72&view=MAP
+#   cta:
+#   - text: Explorá los datos
+#     href: datos/buscar/?publishingOrg=862f7ec3-3134-4dce-ab5a-03c81f54bd72&view=MAP
+#     isPrimary: true
+#
+#
+# splitNaturalistaUY:
+#   reverse: true
+#   title: NaturalistaUY
+#   height: 70vh
+#   description: |      # required
+#     El sitio de iNaturalist para Uruguay es parte de Biodiversidata
+#   # img required
+#   background: https://inaturalist-open-data.s3.amazonaws.com/photos/172604649/large.jpeg
+#   imageLicense: |
+#     *Heteroxolmis dominicana* observed in Uruguay by Julián Rolando Tocce (licensed under http://creativecommons.org/licenses/by-nc/4.0/) via [iNaturalist](https://www.gbif.org/occurrence/3455634222)
+#   #overlayColor: "#000033"
+#   href: https://naturalista.uy
+#   cta:
+#   - text: Explorá los datos en GBIF
+#     href: datos/buscar/?publishingOrg=28eb1a3f-1c15-4a95-931a-4af90ecb574d&view=MAP
+#     isPrimary: true
+#   - text: Accedé a la plataforma
+#     href: https://naturalista.uy
 
 # Features
-novedades:
+naturalistauy:
   features:
-  - title: Lanzamiento de NaturalistaUY
+  - title: NaturalistaUY
     description: |      # required
-      El 13 de diciembre se realizó el lanzamiento de NaturalistaUY el portal de iNaturalist para Uruguay
+      El sitio de **iNaturalist** para Uruguay es una iniciativa conjunta entre Biodiversidata y la organización de educación ambiental JULANA
     # img required
-    background: https://live.staticflickr.com/65535/52143468731_03d849bb07_k.jpg
-    #overlayColor: "#000033"
+    background: /assets/images/logos/NaturalistaUY-SocialMediaIcon.png
     href: https://naturalista.uy
     cta:
-    - text: Ver más
-      href: post/2021/lanzamiento-naturalistauy/
+    - text: Explorá los datos
+      href: datos/buscar/?publishingOrg=28eb1a3f-1c15-4a95-931a-4af90ecb574d&view=MAP
       isPrimary: true
+    - text: Accedé a la plataforma
+      href: https://naturalista.uy
