--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description: >- # this means to ignore newlines (until baseurl:)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://biodiversidata.org/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: biodiversidata # if you have an account you want to link to. Else comment this line out
-github_username:  bienflorencia # if you have an account you want to link to. Else comment this line out
+github_username: biodiversidata # if you have an account you want to link to. Else comment this line out
 flickr_username: biodiversidata
 
 # Build settings
