--- a/_data/home.yml
+++ b/_data/home.yml
@@ -10,10 +10,11 @@ splitPregunta1:
   title: ¿Qué es Biodiversidata?
   height: 40vh
   description: |      # required
-    Biodiversidata es una **asociación colaborativa** de expertos y expertas con el objetivo de mejorar el conocimiento de la biodiversidad de Uruguay.
+
+    Biodiversidata es un **proyecto colaborativo** que busca mejorar el conocimiento sobre la biodiversidad en el Uruguay a través de la disponibilización de datos abiertos para su uso en la investigación científica, la educación ambiental y la toma de decisiones basadas en evidencia.
+#    Biodiversidata es una **asociación colaborativa** de expertos y expertas con el objetivo de mejorar el conocimiento de la biodiversidad de Uruguay.
   # img required
   background: assets/images/logos/uy-violeta.png
-  overlayColor: "#fefefe"
   imageLicense: |
 #    Designed by [Renata Polastri](https://renatapolastri.com)
 
@@ -22,22 +23,21 @@ splitPregunta2:
   title: ¿Por qué construir un Consorcio de Datos en Uruguay?
   height: 40vh
   description: |      # required
-    Los patrones de biodiversidad en el país siguen siendo poco conocidos debido a serios **vacíos geográficos de información**. Esto representa un gran desafío para nuestra comprensión de la estructura de la biodiversidad y la capacidad para conservar la naturaleza.
+    Los patrones de biodiversidad en el país siguen siendo poco conocidos debido a serios **vacíos geográficos de información**. Para afrontar este desafío, Biodiversidata facilita la recopilación, estandarización y publicación de datos de biodiversidad derivados de la investigación científica.
   # img required
   background: assets/images/logos/flor-verde.png
-  overlayColor: "#fefefe"
   imageLicense: |
 #    Designed by [Renata Polastri](https://renatapolastri.com)
 
 splitPregunta3:
   reverse: true
-  title: ¿Cuál es el plan?
+  title: ¿Cuál es el objetivo?
   height: 40vh
   description: |      # required
-    Recopilar la mayor cantidad posible de datos de especies de **vertebrados, invertebrados y plantas**, utilizarlos para generar investigaciones científicas de impacto global en colaboración y hacer que los datos estén disponibles de forma gratuita y abierta.
+    Biodiversidata busca responder **preguntas de investigación** en el país y la región, de cara a abordar los desafíos globales de la pérdida de la biodiversidad y la degradación del ambiente. Además, también busca promover iniciativas de **ciencia comunitaria** y la generación de datos de calidad por parte de personas no científicas.
+#    Recopilar la mayor cantidad posible de datos de especies de **vertebrados, invertebrados y plantas**, utilizarlos para generar investigaciones científicas de impacto global en colaboración y hacer que los datos estén disponibles de forma gratuita y abierta.
   # img required
   background: assets/images/logos/rana-violeta.png
-  overlayColor: "#fefefe"
   imageLicense: |
 #    Designed by [Renata Polastri](https://renatapolastri.com)
 
