change menu section name

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -39,7 +39,7 @@
     href: /recursos/cursos
   - text: Código
     href: /recursos/codigo
-  - text: Datos en Zenodo
+  - text: Bases de datos
     href: /recursos/zenodo
   # - text: Reportes
   #   href: /recursos/reportes
