--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ siteMeasurements:
 algae:
   rootLang: es
   # latestPostLimit: 3
-  logo: /assets/images/logos/logo_h_col.png  # Logo in navbar, will be displayed with 28px height
+  logo: /assets/images/logos/logo_h_update.png #/assets/images/logos/logo_h_col.png  # Logo in navbar, will be displayed with 28px height
   # logoAndTitle: true           # include the title next to the logo
   archive_permalink: /novedades/  # Permalink of page using archive.html layout, required when using post categories
   style:
